v0.1, April 30th 2013 -- Initial release.

v0.1.4, December 17th 2013 -- Bunch of changes since last time.
- Now the first argument of the plots doesn't have to be an 'ax' object,
it will create the object automagically, and can do "from prettyplotlib
import *" for matplotlib-native functionality
- Refactored to put each plotting function into its own file
- All functions now return an 'ax' object (from which the scatterpoints or
boxplots can be accessed). Except for 'pcolormesh' which returns the 'fig'
- Don't change any rcParams upon import, everything is done programmtically
- pcolormesh also takes a center_value